fixes layout bug in product tooltip in looks

--- a/apparelrow/media/src/partials/_widget.sass
+++ b/apparelrow/media/src/partials/_widget.sass
@@ -20,19 +20,22 @@ $tooltip_width: 242px
     background-color: white
     float: left
     width: 90px
-    line-height: 115px
+    line-height: 113px
     height: 115px
     margin-right: 10px
     img
       vertical-align: middle
   .product-meta, .ar-product-meta
     float: left
+    margin-right: 10px
+    margin-top: 2px
     h2
-      margin-top: 1em
-      margin-bottom: 0px
+      margin-top: 0
+      margin-bottom: 0
       border-bottom: none
       white-space: normal
       overflow: hidden
+      padding-right: 16px
     h3
       color: $easy_color
       font-size: smaller
